--- a/bootstrap_admin/templates/admin/base.html
+++ b/bootstrap_admin/templates/admin/base.html
@@ -48,12 +48,7 @@
           {% block sidebar_menu %}
 
             <div id="sidebar-menu" class="col-xs-6 col-sm-3 col-md-2 sidebar-menu">
-              {% block branding %}
-                <a href="{% url 'admin:index' %}" class="django-admin-logo">
-                  <!-- Django Administration -->
-                  <img src="{% static "bootstrap_admin/img/logo-140x60.png" %}" alt="{{ site_header|default:_('Django administration') }}">
-                </a>
-              {% endblock branding %}
+              {% block branding %}{% endblock branding %}
               {% block filters %}{% endblock filters %}
               {% render_menu_app_list %}
             </div>
